[package]
name = "lib_ccxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "=1.0.30"
time = { version = "=0.3.20", features = ["macros", "formatting"] }
derive_more = "0.99.17"
url = "=2.3.1"
num_enum = "0.5.1"
socket2 = "0.4.7"
strum = "0.24.1"
strum_macros = "0.24.3"
crc32fast = "1.3.2"

[features]
default = [
  "wtv_debug",
  "enable_ffmpeg",
  "debug",
  "with_libcurl",
]
wtv_debug = []
enable_ffmpeg = []
debug_out = []
debug = []
with_libcurl = []
